@@ -150,4 +150,7 @@ struct mrt_array
 
 void append_to_array(struct mrt_array* arr, void* to_append);
 
+/* result must be free'd with xmlXPathFreeNodeSet() */
+xmlNodeSetPtr get_xpath_nodeset(xmlDocPtr doc, const xmlChar* xpath_expr);
+
 #endif
