@@ -3,6 +3,7 @@
 
 /* libxml2 */
 #include "libxml/parser.h"
+#include "libxml/xpath.h"
 
 #include "common.h"
 
